# speech-to-text-to-speech

./: .gitignore  LICENSE  README.md  device_check.py  main.py  requirements.txt
aivmlib_py310/: .gitignore  LICENSE  Readme.md  pyproject.toml
aivmlib_py310/.github/workflows/: deploy.yml
aivmlib_py310/aivmlib/: __init__.py  __main__.py
aivmlib_py310/aivmlib/schemas/: aivm_manifest.py  aivm_manifest_constants.py  style_bert_vits2.py
